# alpaca_api_client

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
examples/: create_order.rs  delete_order.rs  get_historical_bars.rs  get_news.rs  get_order.rs  historical_crypto_bars.rs  manage_account.rs  option_bars.rs  portfolio_history.rs  positions.rs  stock_bars.rs  stock_trades.rs  stream_crypto.rs  stream_stock.rs  stream_trade_updates.rs
src/: account.rs  activity.rs  bars.rs  lib.rs  order.rs  positions.rs  serde.rs  stream.rs  timeframe.rs  trades.rs  trend.rs
src/market_data/: mod.rs  news.rs  screener.rs
src/market_data/crypto/: bars.rs  mod.rs  orderbook.rs  quotes.rs  snapshot.rs  trades.rs
src/market_data/options/: bars.rs  chain.rs  mod.rs  quotes.rs  snapshot.rs  trades.rs
src/market_data/stocks/: auctions.rs  bars.rs  mod.rs  quotes.rs  snapshot.rs  snapshots.rs  trades.rs
src/stream/: connection.rs  crypto.rs  error.rs  mod.rs  stock.rs  trade_updates.rs  types.rs
src/trading/: account.rs  activities.rs  calendar.rs  clock.rs  mod.rs  order.rs  portfolio.rs  positions.rs
src/trading/assets/: assets.rs  mod.rs  option_contracts.rs
src/trading/order/: create.rs  delete.rs  get.rs  mod.rs  replace.rs
