[package]
name = "alpaca_api_client"
version = "0.4.1"
edition = "2021"
authors=["Jon Karrer <karrerjon@gmail.com>"]
description = "Unofficial Alpaca API Client"
license = "MIT/Apache-2.0"
repository = "https://github.com/jonkarrer/alpaca_api_client"
readme = "README.md"
keywords = ["stocks", "trading", "alpaca", "api", "client"]
categories = ["finance"]

[dependencies]
dotenvy = "0.15.7"
serde = {version = "1.0.167", features = ["derive"]}
serde_json = "1.0.100"
ureq = { version = "2.7.1", features = ["json"] }