[package]
name = "alpaca_api_client"
version = "0.6.3"
edition = "2021"
authors=["Jon Karrer <karrerjon@gmail.com>"]
description = "Unofficial Alpaca API Client"
license = "MIT/Apache-2.0"
repository = "https://github.com/jonkarrer/alpaca_api_client"
readme = "README.md"
keywords = ["stocks", "trading", "alpaca", "api", "client"]
categories = ["finance"]

[dependencies]
dotenvy = "0.15.7"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.132"
ureq = { version = "2.10.1", features = ["json"] }