[package]
name = "alpaca_api_client"
version = "0.6.4"
edition = "2024"
authors=["Jon Karrer <karrerjon@gmail.com>"]
description = "Unofficial Alpaca API Client"
license = "MIT/Apache-2.0"
repository = "https://github.com/jonkarrer/alpaca_api_client"
readme = "README.md"
keywords = ["stocks", "trading", "alpaca", "api", "client"]
categories = ["finance"]

[dependencies]
dotenvy = "0.15.7"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
ureq = { version = "3.2.0", features = ["json"] }
